# cainam-rust

./: .gitignore  Cargo.toml  codebase.md
.cline-docs/: activeContext.md  productContext.md
.specstory/history/: cargo-build-error-troubleshooting.md  cargo-test-errors-investigation.md  cargo-test-errors-troubleshooting.md  debugging-cargo-test-errors.md  debugging-cargo-test-for-crypto-ai.md  exploring-rig-framework-for-trading-agent.md  fixing-deprecated-qdrantclientconfig-in-rust.md  fixing-errors-in-cargo-test.md  fixing-missing-trait-error-in-rust.md  fixing-qdrant-vector-store-implementation.md  fixing-vector-store-implementation.md  resolving-undeclared-crate-error-in-rust.md  untitled.md
prompts/: system.txt
rig-birdeye/: Cargo.toml  README.md
rig-birdeye/examples/: basic_usage.rs  websocket_streaming.rs
rig-birdeye/src/: actions.rs  lib.rs  types.rs
rig-birdeye/src/actions/: mod.rs  token_search.rs  wallet_search.rs
rig-birdeye/src/providers/: birdeye.rs  cache.rs  mock.rs  mod.rs  pagination.rs  rate_limiter.rs  websocket.rs
rig-birdeye/src/types/: api.rs  error.rs  mod.rs
rig-birdeye/tests/: integration_test.rs
src/: main.rs
src/agent/: mod.rs
src/birdeye/: mod.rs
src/prompts/: system.txt
src/trading/: mod.rs
src/twitter/: mod.rs
src/vector_store/: mod.rs
