[package]
name = "solana-trading-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
async-trait = "0.1"
qdrant-client = { version = "1.8", features = ["default"] }
rig-core = { version = "0.6.1", features = ["derive"] }
uuid = { version = "1.7", features = ["v4"] }

# Temporarily remove Discord and Telegram until we resolve the dependency conflicts
# serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
# teloxide = { version = "0.12", features = ["macros"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pretty_assertions = "1.0"
dotenv = "0.15"
mockall = "0.11"
async-trait = "0.1"
test-log = { version = "0.2", features = ["trace"] }
env_logger = "0.10"

[features]
default = ["derive"]
derive = ["rig-core/derive"]
all = ["rig-core/all"]