[package]
name = "rig-birdeye"
version = "0.1.0"
edition = "2021"
description = "Birdeye plugin for rig-core providing DeFi and token analytics"
license = "MIT"

[dependencies]
rig-core = { path = "../rig-core" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
chrono = "0.4"
base64 = "0.21"
bs58 = "0.5"
url = "2.4"
hex = "0.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pretty_assertions = "1.0"
dotenv = "0.15"

[lib]
name = "rig_birdeye"
path = "src/lib.rs" 